; ModuleID = '/home/carl/AnghaBench/redshift/src/extr_gamma-quartz.c_quartz_set_option.c'
source_filename = "/home/carl/AnghaBench/redshift/src/extr_gamma-quartz.c_quartz_set_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"preserve\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [80 x i8] c"Parameter `%s` is now always on;  Use the `%s` command-line option to disable.\0A\00", align 1
@.str.2 = private unnamed_addr constant [3 x i8] c"-P\00", align 1
@.str.3 = private unnamed_addr constant [33 x i8] c"Unknown method parameter: `%s'.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*)* @quartz_set_option to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @quartz_set_option(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = call i64 @strcasecmp(i8* %8, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = load i32, i32* @stderr, align 4
  %13 = call i8* @_(i8* getelementptr inbounds ([80 x i8], [80 x i8]* @.str.1, i64 0, i64 0))
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 (i32, i8*, i8*, ...) @fprintf(i32 %12, i8* %13, i8* %14, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0))
  br label %21

16:                                               ; preds = %3
  %17 = load i32, i32* @stderr, align 4
  %18 = call i8* @_(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.3, i64 0, i64 0))
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 (i32, i8*, i8*, ...) @fprintf(i32 %17, i8* %18, i8* %19)
  store i32 -1, i32* %4, align 4
  br label %22

21:                                               ; preds = %11
  store i32 0, i32* %4, align 4
  br label %22

22:                                               ; preds = %21, %16
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i64 @strcasecmp(i8*, i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*, ...) #1

declare dso_local i8* @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
